[package]
name = "oxidize-rest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.204", features = ["derive"] }
sqlx = { version = "0.7", features = [ "runtime-async-std", "tls-native-tls" ] }

